# adventofcode2025

./: .gitignore  Cargo.toml  README.md  justfile
common/: Cargo.toml
common/src/: lib.rs
daily-template/: Cargo.toml
daily-template/src/: main.rs
day1/: Cargo.toml
day1/src/: main.rs
day10/: Cargo.toml
day10/src/: input.txt  main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: input.txt  main.rs
day2/: Cargo.toml
day2/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/: Cargo.toml
day5/src/: main.rs
day6/: Cargo.toml
day6/src/: main.rs
day7/: Cargo.toml
day7/src/: input.txt  main.rs
day8/: Cargo.toml
day8/src/: input.txt  main.rs
day9/: Cargo.toml
day9/src/: input.txt  main.rs
scripts/: get_aoc_input.py
